--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TinDog by Sanchit</title>
+  <title>TinDog</title>
   <!-- Bootstrap CSS link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link href="./css/style.css" rel="stylesheet">
@@ -15,14 +15,14 @@
   <!-- Title -->
   <section id="title" class="gradient-background">
     <div class="container col-xxl-8 px-4 pt-2">
-      <div class="row flex-lg-row-reverse align-items-center g-3 pt-5">
+      <div class="row flex-lg-row-reverse flex-sm-row-reverse align-items-center g-3 pt-5">
         <div class="col-10 col-sm-8 col-lg-4">
           <img src="./images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200" loading="lazy">
         </div>
         
         <div class="col flex-lg-col justify-content-center g-4 col-lg-8">
           <!-- Title of Site-->
-          <div class="align-items-start col-lg-6 row-lg-6">
+          <div class="align-items-start col-lg-6 row-lg-6 col-sm-12">
             <p class="fw-bold tindog">Welcome to best site to find soulmates, but for your dog </p><h3 class="fw-normal display-5 tindog">TinDog <img src="./images/icons8-heart-with-dog-paw-50.png"></h3>
           </div>
           <br><br>
@@ -159,15 +159,14 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-lg">
             <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Pro</h4>
+              <h4 class="my-0 fw-normal">Labrador</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
+                <li>Unlimited Matches</li>
+                <li>Unlimited Messages</li>
+                <li>Unlimited App Usage</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-danger">Get started</button>
             </div>
@@ -176,15 +175,14 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-lg border-danger">
             <div class="card-header py-3 text-bg-danger border-danger">
-              <h4 class="my-0 fw-normal">Enterprise</h4>
+              <h4 class="my-0 fw-normal">Mastiff</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
+                <li>Pirority Listing</li>
+                <li>Unlimited Matches & Messages</li>
+                <li>Unlimited App Usage</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-danger">Contact us</button>
             </div>
@@ -199,8 +197,9 @@
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
         <div class="col mb-3">
-          <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+          <a href="#" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
             <img src="./images/icons8-heart-with-dog-paw-50.png" height="50">
+            <h1 class="fw-normal tindog">TinDog</h1>
           </a>
           <p class="text-body-secondary">© 2023</p>
         </div>
